force-app/main/default/objects/CAF_OrgAddress__c/CAF_OrgAddress__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CAF_OrgAddress</label>
</CustomObject>