force-app/main/default/objects/CAF_OrgAddress__c/fields/BrightVerifyEndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>BrightVerifyEndPointUrl__c</fullName>
    <label>BrightVerifyEndPointUrl</label>
    <length>16</length>
    <type>Text</type>
</CustomField>