force-app/main/default/objects/CAF_OrgAddress__c/fields/CAF_OrgAddress__c.field-meta.xml
<CustomField>
    <fullName>CAF_OrgAddress__c</fullName>
    <label>CAF_OrgAddress</label>
    <type>Url</type>
</CustomField>