force-app/main/default/objects/CAF_OrgAddress__c/fields/Tax_Credit_Team_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Credit_Team_Email_Id__c</fullName>
    <label>Tax &amp; Credit Team Email Id</label>
    <type>Email</type>
</CustomField>